--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.18.1"
   }
 }
